# mmnn

./: LICENSE.txt  README.md  pyproject.toml
data/: 2010-games.csv  2010-teams.csv  2014-games.csv  2014-teams.csv  2015-data.csv  2016-teams.csv  2017-data.csv  2017-teams.csv  2018-data.csv  2018-games.csv  2020-teams.csv  2021-data.csv  2021-teams.csv  2022-games.csv  2022-teams.csv  2024-data.csv  2025-data.csv  2025-games.csv  model.pt
data/men/: 2010-data.csv  2011-data.csv  2011-games.csv  2011-teams.csv  2012-data.csv  2012-games.csv  2012-teams.csv  2013-data.csv  2013-games.csv  2013-teams.csv  2014-data.csv  2015-games.csv  2015-teams.csv  2016-data.csv  2016-games.csv  2017-games.csv  2018-teams.csv  2020-data.csv  2021-games.csv  2022-data.csv  2023-data.csv  2023-games.csv  2023-teams.csv  2024-games.csv  2024-teams.csv  2025-teams.csv  2026-games.csv  2026-teams.csv  model.pt  model_NO_2026.pt
data/women/: 2010-data.csv  2010-games.csv  2010-teams.csv  2011-data.csv  2011-games.csv  2011-teams.csv  2012-data.csv  2012-games.csv  2012-teams.csv  2013-data.csv  2013-games.csv  2013-teams.csv  2014-data.csv  2014-games.csv  2014-teams.csv  2015-data.csv  2015-games.csv  2015-teams.csv  2016-data.csv  2016-games.csv  2016-teams.csv  2017-data.csv  2017-games.csv  2017-teams.csv  2018-data.csv  2018-games.csv  2018-teams.csv  2020-games.csv  2021-data.csv  2021-games.csv  2021-teams.csv  2022-data.csv  2022-games.csv  2022-teams.csv  2023-data.csv  2023-games.csv  2023-teams.csv  2024-data.csv  2024-games.csv  2024-teams.csv  (+7 more)
src/mmnn/: __about__.py  __main__.py  paths.py
src/mmnn/cli/: __init__.py
src/mmnn/data/: __init__.py  fetch.py  process.py
src/mmnn/nn/: __init__.py  bracket.py  (+5 more)
tests/: test_bracket_metrics.py  test_fetch.py  test_nn.py  test_paths.py  test_process.py
tests/fixtures/: 2023-bracket-snippet.html  two-teams-uconn-stetson.csv
